day2 folder created : index.html & styles.css files added (task completed : CSS Color Markers)

--- a/day1/HW/index.html
+++ b/day1/HW/index.html
@@ -20,7 +20,7 @@
       </div>
       <div id="buttons">
         <button id="signin">Sign In</button>&nbsp;&nbsp;&nbsp;
-        <button id="signin">Register</button>
+        <button id="signin1">Register</button>
       </div>
     </div>
 
