--- a/Weekly-test-3/index.html
+++ b/Weekly-test-3/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Jordan</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
-<body oncontextmenu="return false;">
+<body>
   <div class="offer">
     <h4>Free Shipping for all orders now</h4>
   </div>
