weekly-test-3 : index.html & styles.css files edited

--- a/Weekly-test-3/index.html
+++ b/Weekly-test-3/index.html
@@ -24,7 +24,7 @@
     <span>🔍</span>
   </nav>
   <main>
-    <section class="sale">
+    <section class="promotional-section">
       <header>
         <h1>SHOES, CLOTHING &amp; ACCESSORIES SALE: UP TO 60% OFF</h1>
         <p>
@@ -36,7 +36,7 @@
       </header>
     </section>
 
-    <section class="category-1">
+    <section class="trending-section">
       <div class="c1_sub">
         <h1>Trending</h1>
         <div class="tr">
@@ -59,7 +59,7 @@
         </div>
       </div>
     </section>
-    <section class="category-2">
+    <section class="history-section">
       <div class="container">
         <div class="shoe" style="background: linear-gradient(to right, #000000, #e74c3c)">
           <div class="des">
